k8s/admin-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ui
  namespace: playpokerodds
  labels:
    app.kubernetes.io/part-of: playpokerodds
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ppo-admin-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ppo-admin-ui
        app.kubernetes.io/part-of: playpokerodds
    spec:
      containers:
        - image: mobyit/ppo-admin-ui:stable
          name: admin-ui
          ports:
            - containerPort: 80
              name: http-port
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: admin-ui-service
  namespace: playpokerodds
spec:
  selector:
    app.kubernetes.io/name: ppo-admin-ui
  ports:
    - name: admin-ui-port
      port: 80
      targetPort: http-port
      protocol: TCP
  type: LoadBalancer
