k8s/api.deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: playpokerodds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-deployment
  namespace: playpokerodds
  labels:
    app: playpokerodds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ppo-web-api
  template:
    metadata:
      labels:
        app: ppo-web-api
    spec:
      containers:
      - image: mobyit/ppo-api:stable
        name: web-api
        ports:
          - containerPort: 3000
            name: http-port
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: web-api-service
  namespace: playpokerodds
spec:
  selector:
    app: ppo-web-api
  ports:
    - name: web-api-port
      port: 80
      targetPort: http-port
      protocol: TCP
