k8s/calc-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calc-api-deployment
  labels:
    app: playpokerodds
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ppo-calc-odds
  template:
    metadata:
      labels:
        app: ppo-calc-odds
    spec:
      containers:
      - image: mobyit/ppo-calc-odds:stable
        name: calc-odds
        ports:
          - containerPort: 7171
            name: http-port
        resources:
          requests:
            cpu: 1
        livenessProbe:
          httpGet:
            path: /liveness
            port: 7071
          initialDelaySeconds: 3
          periodSeconds: 3
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: calc-odds-service
spec:
  selector:
    app: ppo-calc-odds
  ports:
    - name: calc-odds-port
      port: 80
      targetPort: 7071
      protocol: TCP
