k8s/web-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-deployment
  labels:
    app.kubernetes.io/name: playpokerodds
spec:
  selector:
    matchLabels:
      app: ppo-web-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ppo-web-api
    spec:
      containers:
        - image: ghcr.io/moby-it/ppo-web-api
          name: web-api
          ports:
            - containerPort: 3000
              name: http-port
          livenessProbe:
            httpGet:
              path: /api/health/liveness
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health/readiness
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 30
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: web-api-service
spec:
  selector:
    app: ppo-web-api
  ports:
    - name: web-api-port
      port: 80
      targetPort: http-port
      protocol: TCP
