k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  namespace: playpokerodds
  annotations:
      annotations:
      # nginx.org/proxy-connect-timeout: "30s"
      # nginx.org/proxy-read-timeout: "20s"
      # nginx.org/client-max-body-size: "4m"
      # nginx.ingress.kubernetes.io/limit-connections: "100"
      # nginx.ingress.kubernetes.io/limit-rps: "50"
  #   cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # tls:
  # - hosts:
  #   - playpokerodds.192.168.49.2.nip.io
  #   secretName: playpokerodds-tls
  rules:
    - host: playpokerodds.192.168.49.2.nip.io
      http:
        paths:
          - path: /api/calcOdds
            pathType: Exact
            backend:
              service:
                name: calc-odds
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: web-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-ui-service
                port:
                  number: 80
